# opinion-dynamics-viz

./: .gitignore  README.md  opinion_dynamics.py  opinion_dynamics_notebook.ipynb  pyproject.toml  test_opinion_dynamics.ipynb
