[tool.poetry]
name = "opinion-dynamics"
version = "0.1.0"
description = "an opinion dynamics simulation and visualization with gpt3 integration"
authors = ["Eseoghene <efekodoeseoghene@gmail.com>"]
readme = "README.md"
packages = [{include = "opinion_dynamics"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.0"
openai = "^0.28.0"
matplotlib = "^3.8.0"
networkx = "^3.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
